added link filter page

--- a/src/Volvox.Helios.Web/Views/Moderation/GlobalSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/GlobalSettings.cshtml
@@ -59,7 +59,7 @@
             </div>
 
             <div class="row form-group mt-4 mb-4">
-                <button type="submit" value="Save" class="btn btn-volvox-outline save-btn ml-auto">Save</button>
+                <button type="submit" class="btn btn-volvox-outline save-btn ml-auto">Save</button>
             </div>
         </form>
     </div>
