--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -56,9 +56,9 @@ hr{
   background: var(--color-deep-dark);
 }
 
-.dropdown-menu.show{
+.dropdown-menu.show {
   background: var(--color-deep-dark);
-  border-color: var(--color-gray2);
+  border-color: #535353;
 }
 
 .dropdown-menu.show a{
