--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -98,6 +98,15 @@ hr{
   border: 2px solid #535353;
 }
 
+.user-list .user-link {
+  color: white;
+  transition: .3s;
+}
+
+  .user-list .user-link:hover {
+    color: var(--color-gray2)
+  }
+
 footer {
   background: var(--color-deep-dark);
 }
